z-index nav issue fixed. ref https://github.com/mozilla/kitsune/issues/3645

--- a/kitsune/sumo/static/sumo/less/main.less
+++ b/kitsune/sumo/static/sumo/less/main.less
@@ -1647,6 +1647,7 @@ input[type="submit"]{
 
     > ul {
       display: block;
+      z-index: 100;
     }
 
     a {
